src/test/resources/valid_tests/MultipleOutputs.cnna
architecture MultipleOutputs{
    def input Q(-oo:+oo)^{10} data
    def output Q(0:1)^{4} pred[2]

    data ->
    FullyConnected(units=128, no_bias=true) ->
    Tanh() ->
    (
        FullyConnected(units=16, no_bias=true) ->
        Tanh() ->
        FullyConnected(units=4, no_bias=true) ->
        Softmax()
    |
        FullyConnected(units=16, no_bias=true) ->
        Tanh() ->
        FullyConnected(units=4, no_bias=true) ->
        Softmax()
    ) ->
    pred

}